[gd_scene load_steps=19 format=3 uid="uid://c6m2t238knjov"]

[ext_resource type="Script" uid="uid://bybhs41x0ko0u" path="res://src/player/playerController.gd" id="1_4anbu"]
[ext_resource type="Script" uid="uid://c1n2scoew64b3" path="res://src/player/progressBar.gd" id="2_rxibo"]
[ext_resource type="PackedScene" uid="uid://dkjqxy1egu868" path="res://src/player/playerMovement.tscn" id="3_244u8"]
[ext_resource type="Texture2D" uid="uid://n5v0b2ld27mk" path="res://assets/debug/projectile.png" id="3_jiejy"]
[ext_resource type="PackedScene" uid="uid://d0m2s3pjfjhlx" path="res://src/player/playerHealth.tscn" id="4_5f2sf"]
[ext_resource type="Script" uid="uid://b3fkkmq335ygu" path="res://src/player/texture_progress_bar.gd" id="4_o822w"]
[ext_resource type="PackedScene" uid="uid://quo4cjhqfu2a" path="res://src/player/playerAttack.tscn" id="5_5f2sf"]
[ext_resource type="Texture2D" uid="uid://b5fylubgb472u" path="res://assets/background/Adobe Express - file (1).png" id="7_x42xx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxibo"]
size = Vector2(50, 100)

[sub_resource type="Animation" id="Animation_5f2sf"]
resource_name = "Fall"

[sub_resource type="Animation" id="Animation_rxibo"]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 0.1, 0.19999999, 0.3, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(0.9843137, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mf2ua"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_jiejy"]
resource_name = "Jump"
step = 0.0333

[sub_resource type="Animation" id="Animation_244u8"]
resource_name = "Move"

[sub_resource type="Animation" id="Animation_o822w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o822w"]
_data = {
&"Fall": SubResource("Animation_5f2sf"),
&"Hit": SubResource("Animation_rxibo"),
&"Idle": SubResource("Animation_mf2ua"),
&"Jump": SubResource("Animation_jiejy"),
&"Move": SubResource("Animation_244u8"),
&"RESET": SubResource("Animation_o822w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_244u8"]
size = Vector2(52, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jiejy"]
size = Vector2(54, 105)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4anbu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rxibo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o822w")
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -26.0
offset_top = -50.0
offset_right = 26.0
offset_bottom = 51.0
color = Color(0, 1, 0, 1)

[node name="Debug_Label" type="Label" parent="."]
offset_left = -25.0
offset_top = -130.0
offset_right = 25.0
offset_bottom = -107.0
text = "Debug"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -72.0
offset_top = -95.0
offset_right = 78.0
offset_bottom = -65.0
fill_mode = 1
script = ExtResource("2_rxibo")

[node name="PlayerMovement" parent="." node_paths=PackedStringArray("player", "ground_detector", "debug_label") instance=ExtResource("3_244u8")]
player = NodePath("..")
ground_detector = NodePath("../GroundDetector")
debug_label = NodePath("../Debug_Label")

[node name="PlayerHealth" parent="." node_paths=PackedStringArray("player", "hitbox", "health_bar") instance=ExtResource("4_5f2sf")]
player = NodePath("..")
hitbox = NodePath("../player_hitbox")
health_bar = NodePath("../ProgressBar")

[node name="PlayerAttack" parent="." node_paths=PackedStringArray("player", "attackbox") instance=ExtResource("5_5f2sf")]
player = NodePath("..")
attackbox = NodePath("../flippable/player_attackbox")

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 133

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_244u8")
debug_color = Color(0.7026044, 0.2792841, 1, 0.41960785)

[node name="GroundDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 60)

[node name="flippable" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="flippable"]

[node name="player_attackbox" type="Area2D" parent="flippable"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="flippable/player_attackbox"]
position = Vector2(19, 0.5)
shape = SubResource("RectangleShape2D_jiejy")
debug_color = Color(0.99947137, 0, 0.1284638, 0.41960785)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -31.0
offset_top = -133.0
offset_right = 33.0
offset_bottom = -69.0
fill_mode = 4
texture_under = ExtResource("3_jiejy")
texture_over = ExtResource("7_x42xx")
texture_progress = ExtResource("3_jiejy")
tint_under = Color(0, 1, 0, 1)
tint_over = Color(0.0051856074, 0.9282323, 1.0431446, 1)
tint_progress = Color(1, 0, 0, 1)
script = ExtResource("4_o822w")

[connection signal="enemy_collide" from="PlayerHealth" to="." method="_on_enemy_collide"]
[connection signal="enemy_exit" from="PlayerHealth" to="." method="_on_enemy_exit"]
